updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am learning to code in order to get a hard skill to make myself marketable.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Oregon, but grew up in Austin.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like fitness, shooting, gaming, history, and discussing various topics at lengths with my friends.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I do not have one. I -had- one, but determined it wasn't all it was cracked up to be.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Austin</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To get a hard skill that I can use to pursue a lucrative career.</p>
     </section>
 
     <footer id="footer">
